[package]
name = "vitis_be"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.29"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.18"
features = ["json"]

[dependencies]
vitis_be_macros = { path = "macros" }
anyhow = "1.0"
