[package]
name = "vitis_be"
version = "0.1.0"
edition = "2021"

[dependencies.reqwest]
version = "0.11"
features = ["json", "cookies"]

[dependencies.dashmap]
version = "5.4"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.tokio]
version = "1.29"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies]
vitis_be_macros = { path = "macros" }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
anyhow = "1.0"
cookie = "0.17"
rand = "0.8"
axum = "0.6"
